# fullstack-turborepo-template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  commitlint.config.ts  lefthook.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
templates/api/: README.md  eslint.config.ts  package.json  tsconfig.json
templates/api/src/: main.ts
templates/app/: README.md  package.json  tsconfig.json
templates/aws-lambda-powertools/: README.md  eslint.config.ts  package.json  template.yaml  tsconfig.json  vitest.config.ts
templates/aws-lambda-powertools-2/: README.md  package.json
templates/aws-lambda-powertools/src/: dev.ts  index.ts
templates/doc/: README.md  eslint.config.ts  package.json  vitest.config.ts
templates/doc/src/: mdx-components.tsx
templates/e2e/: README.md  package.json
templates/expo-55/: README.md  app.json  eslint.config.mjs  package.json  tsconfig.json
templates/k8s/: Pulumi.dev.yaml  README.md  eslint.config.ts  package.json  tsconfig.json
templates/k8s copy/: Pulumi.yaml  package.json  tsconfig.json
templates/k8s copy/src/: index.ts
templates/k8s/src/: index.ts
templates/nestjs-11/: Dockerfile  README.md  eslint.config.ts  package.json  tsconfig.build.json  vitest.config.ts
templates/nextjs-16/: Dockerfile  README.md  package.json  tsconfig.json
templates/nextra-4/: Dockerfile  README.md  eslint.config.ts  next.config.ts  package.json  tsconfig.json
templates/pulumi-3/: .env.example  Pulumi.aws.yaml  Pulumi.baremetal.yaml  Pulumi.dev.yaml  Pulumi.gcp.yaml  Pulumi.hcloud.yaml  Pulumi.local.yaml  Pulumi.yaml  README.md  eslint.config.ts  package.json  tsconfig.json
templates/pulumi-3/scripts/: ci.js  (+4 more)
templates/robot-framework-7/: README.md  package.json  pyproject.toml
templates/serverless-framework-3/: README.md  package.json
templates/serverless-framework-v3/: README.md  package.json  serverless.yml
templates/web/: README.md  eslint.config.ts  package.json
(+40 files in other folders)
